refactor: 주문 서비스 등록 및 주문 상태 변경 기능 리팩터링